--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 </head>
 
 <body>
+   
+   <div class="container">
     <form  name="register">
         <table>
             <tr>
@@ -32,17 +34,14 @@
                     </select></td>
             </tr>
             <tr>
-                <span style='color:red;' id="spn"></span>
                 <td colspan="2"> <input  type="button" onclick="regFor()" value="Register"/></td>
             </tr>
         </table>
-
-
+        
         <br>
 
-
-
     </form>
+   </div>
     <script src="register.js"></script>
 </body>
 
